--- a/package.json
+++ b/package.json
@@ -5,16 +5,18 @@
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --respawn --transpile-only index.ts",
+    "dev": "ts-node-dev --respawn --transpile-only -r dotenv/config index.ts",
     "build": "tsc",
     "start": "node ./index.js"
   },
   "author": "Laennart",
   "license": "ISC",
   "devDependencies": {
+    "@types/common-tags": "^1.8.0",
     "@types/glob": "^7.1.3",
     "@types/luxon": "^2.0.3",
     "@types/node": "^14.14.10",
+    "dotenv": "^16.4.5",
     "eslint": "^7.32.0",
     "ts-node-dev": "^1.0.0-pre.49",
     "tslib": "^2.0.3",
@@ -22,7 +24,6 @@
   },
   "dependencies": {
     "@discordjs/builders": "^0.6.0",
-    "@types/common-tags": "^1.8.0",
     "common-tags": "^1.8.0",
     "discord-api-types": "^0.22.0",
     "discord.js": "^13.1.0",
